# tdd-python-book

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
accounts/: authentication.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_token.py
accounts/tests/: test_authentication.py  test_models.py  test_views.py
applicationC/: requirements.txt  tmp.md
applicationC/deploy_tools/: inventory.ansible  provision.ansible.yaml
chapter1/: functional_tests.py  main.py
chapter10/lists/: urls.py
chapter10/superlists/: settings.py
chapter12/functional_tests/: base.py  test_list_item_validation.py
chapter12/lists/: views.py
chapter13/functional_tests/: base.py  test_list_item_validation.py
chapter13/lists/: models.py  views.py
chapter13/superlists/: settings.py
chapter14/functional_tests/: test_list_item_validation.py  test_simple_list_creation.py
chapter14/lists/: forms.py  views.py
chapter15/functional_tests/: test_list_item_validation.py
chapter15/lists/: forms.py  models.py  views.py
chapter15a16/functional_tests/: test_simple_list_creation.py
chapter2/: main.py
chapter21/: requirements.txt
chapter24/: .gitignore
chapter3/: depends.py  functional_tests.py  main.py
chapter3a4/: functional_tests.py  main.py  todo.html
chapter5/: database.py  depends.py  functional_tests.py  main.py
chapter6/: manage.py
chapter7/: manage.py
deploy/: README.md
functional_tests/: base.py  test_layout_and_styling.py  test_login.py
lists/: models.py
static/: lists.js
(+130 files in other folders)
