[tool.poetry]
name = "tdd-python-book"
version = "0.1.0"
description = ""
authors = ["edpyt"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
fastapi = "^0.104.1"
selenium = "^4.15.2"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
blue = "^0.9.1"
django = "^4.2.7"
fastwsgi = "^0.0.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
